Update card text

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -295,7 +295,8 @@
 
 .card--outreach {
   background-image: url(/img/brand/landing/outreach.svg);
-  background-size: 116px !important;
+  background-position: bottom 7px right 16px !important;
+  background-size: 108px !important;
 
   h2,
   a {
