Add hover states to card links and pagination

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -30,6 +30,7 @@ $red-60: #eca19d;
 $red-80: #e5827d;
 $red-100: #df635c;
 $red-200: #ba3932;
+$red-300: #942520;
 
 $ochre-20: #fdf3de;
 $ochre-40: #fbe8be;
@@ -38,6 +39,7 @@ $ochre-80: #f6d17d;
 $ochre-100: #f4c55c;
 $ochre-200: #e99821;
 $ochre-300: #a66910;
+$ochre-400: #915b0b;
 
 $gray-5: #f8f8f8;
 $gray-20: #ddddde;
