Update voice and tone copy

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -39,7 +39,7 @@ $ochre-80: #f6d17d;
 $ochre-100: #f4c55c;
 $ochre-200: #e99821;
 $ochre-300: #a66910;
-$ochre-400: #915b0b;
+$ochre-400: #885509;
 
 $gray-5: #f8f8f8;
 $gray-20: #ddddde;
