--- a/_includes/testimonial_cta.html
+++ b/_includes/testimonial_cta.html
@@ -13,7 +13,7 @@
           >Former Chief Information Officer</span
         >
         <span class="testimonial-org"
-          ><strong>Department of Homeland Security</strong></span
+          ><strong>U.S. Department of Homeland Security</strong></span
         >
       </cite>
     </blockquote>
