Update hero copy

--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -243,6 +243,10 @@
     line-height: 1;
   }
 
+  .hero-text {
+    max-width: 624px;
+  }
+
   .blog-post-footer {
     background-color: transparent;
     border-bottom-width: 0.5rem !important;
