Add lock text to icon

--- a/_includes/lock_link.html
+++ b/_includes/lock_link.html
@@ -1,4 +1,5 @@
 <a class="link--cta" href="{{ include.url }}" download>
   <span class="link__text--cta">{{ include.text }}</span><i
   class="fal fa-lock" aria-hidden="true"></i>
+  <span class="sr-only">Locked</span>
 </a>
