--- a/_includes/pagination_brand.html
+++ b/_includes/pagination_brand.html
@@ -12,7 +12,7 @@
               href="/brand/identity/imagery/">
               <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
               <span>
-                Imagery
+                Previous section: Identity
               </span>
             </a>
             {% elsif page.url == "/brand/illustration/principles/" %}
@@ -21,7 +21,7 @@
                 href="/brand/writing/style/">
                 <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
                 <span>
-                  Writing style
+                  Previous section: Writing
                 </span>
               </a>
             {% elsif page.url == "/brand/outreach/design-guidance/" %}
@@ -30,7 +30,7 @@
                 href="/brand/illustration/illustration-types/">
                 <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
                 <span>
-                  Illustration types
+                  Previous section: Illustration
                 </span>
               </a>
             {% elsif page.url == "/brand/resources/emoji/" %}
@@ -39,7 +39,7 @@
                 href="/brand/outreach/outreach-types/">
                 <span><i class="fal fa-long-arrow-left mr-2" aria-hidden="true"></i></span>
                 <span>
-                  Outreach types
+                  Previous section: Outreach
                 </span>
               </a>
             {% else %}
@@ -61,7 +61,7 @@
               class="pagination-alt__step pagination-alt__step--next pagination__step--last"
               href="/brand/writing/brand-narrative/">
               <span>
-                Brand narrative
+                Next section: Writing
               </span>
               <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
             </a>
@@ -70,7 +70,7 @@
               class="pagination-alt__step pagination-alt__step--next pagination__step--last"
               href="/brand/illustration/principles/">
               <span>
-                Illustration principles
+                Next section: Illustration
               </span>
               <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
             </a>
@@ -79,7 +79,7 @@
               class="pagination-alt__step pagination-alt__step--next pagination__step--last"
               href="/brand/outreach/design-guidance/">
               <span>
-                Outreach design guidance
+                Next section: Outreach
               </span>
               <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
             </a>
@@ -88,7 +88,7 @@
               class="pagination-alt__step pagination-alt__step--next pagination__step--last"
               href="/brand/resources/emoji/">
               <span>
-                Emoji
+                Next section: Resources
               </span>
               <span><i class="fal fa-long-arrow-right ml-2" aria-hidden="true"></i></span>
             </a>
