--- a/_includes/hero_banner_brand.html
+++ b/_includes/hero_banner_brand.html
@@ -17,7 +17,7 @@
       <div class="row">
         <div class="col-md-6">
           {% if page.description %}
-            <p class="kicker text-white">{{ site.data.toolkits[page.sidenav]title }}</p>
+            <p class="kicker">{{ site.data.toolkits[page.sidenav]title }}</p>
           {% endif %}
           <{{ heading }} class="hero-heading {% if include.text == 'dark' %}text-ink{% endif %}">
             {% if page.description %}
