Update page title

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,7 +38,7 @@
             <h2>Careers</h2>
             <ul>
               <li><a href="/careers/join/">Join us</a></li>
-              <li><a href="{{site.baseurl}}/careers/professional-capability-framework/">Professional Capability Framework</a></li>
+              <li><a href="{{site.baseurl}}/careers/career-pathways/">Career <br class="linebreak">pathways</a></li>
             </ul>
           </div>
         </div>
