--- a/_includes/header.html
+++ b/_includes/header.html
@@ -84,7 +84,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{{site.baseurl}}/careers/join/">Join us</a>
-            <a class="dropdown-item" href="{{site.baseurl}}/careers/professional-capability-framework/">Professional Capability Framework</a>
+            <a class="dropdown-item" href="{{site.baseurl}}/careers/career-pathways/">Career pathways</a>
           </div>
         </li>
         <li class="nav-item nav-item--thoughts dropdown">
