Update cta text

--- a/_includes/pcf_cta.html
+++ b/_includes/pcf_cta.html
@@ -2,6 +2,6 @@
   header = "We’re hiring."
   text = 'Interested in joining the team? See our open positions.'
   cta_path = "/careers/join/#open-positions"
-  cta = "See open positions"
+  cta = "Join us"
   icon_css_class = "fa fa-at"
 %}
