Update footer CTA copy

--- a/_includes/career_pathways_cta.html
+++ b/_includes/career_pathways_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
-  header = "We’re hiring."
-  text = 'Interested in joining the team? See our open positions.'
+  header = "We’re hiring!"
+  text = 'Let’s change the way government serves millions of people together.'
   cta_path = "/careers/join/#open-positions"
   cta = "Join us"
   icon_css_class = "fa fa-at"
