--- a/_layouts/career_pathways_role.html
+++ b/_layouts/career_pathways_role.html
@@ -34,7 +34,7 @@ layout: default
 
     <section class="col-12 col-md-9">
       <div class="text prose" markdown="1">
-        <p class="font-sm text-gray-light">Published: {{ page.published_date }}</p>
+        <p class="font-sm text-gray-light">Updated: {{ page.updated_date }}</p>
         <h2 class="mt-3" id="introduction">Introduction to the role of {{ page.title | downcase }}</h2>
 {{ content }}
 
