--- a/_includes/career_pathways_cta.html
+++ b/_includes/career_pathways_cta.html
@@ -1,6 +1,6 @@
 {% include cta.html
   header = "We’re hiring!"
-  text = 'Let’s work together to change the way government serves millions of people.'
+  text = 'Let’s work together to change the way government <br class="linebreak">serves millions of people.'
   cta_path = "/careers/join/#open-positions"
   cta = "Join us"
   icon_css_class = "fa fa-at"
