--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -60,7 +60,7 @@
     content: "";
     border-bottom: 2px solid $gray-20;
     width: 100%;
-    top: 20px;
+    top: 16px;
     left: 50%;
     z-index: 2;
   }
@@ -72,16 +72,12 @@
   &.completed {
     color: $blue-100-a;
 
-    .step-counter {
-      background-color: $blue-80;
-    }
-
     &::after {
       position: absolute;
       content: "";
       border-bottom: 2px solid $blue-40;
       width: 100%;
-      top: 20px;
+      top: 16px;
       left: 50%;
       z-index: 3;
     }
@@ -105,8 +101,9 @@
   // width: 40px;
   // height: 40px;
   border-radius: 50%;
-  background: $gray-20;
   margin-bottom: 6px;
+  padding-inline: 3px;
+  background-color: white;
 }
 
 .step-name {
