--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -27,7 +27,6 @@
 .stepper-wrapper {
   margin-top: 27px;
   display: flex;
-  justify-content: space-between;
   margin-bottom: 24px;
   padding-left: 0 !important;
 }
@@ -102,8 +101,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  // width: 40px;
-  // height: 40px;
   border-radius: 50%;
   margin-bottom: 6px;
   padding-inline: 3px;
@@ -126,6 +123,54 @@
   .step-name {
     @include media-breakpoint-down(xs) {
       display: block;
+    }
+  }
+}
+
+@include media-breakpoint-down(xs) {
+  .step-counter {
+    margin-bottom: 0;
+  }
+
+  .stepper-item.active {
+    flex-direction: row;
+    margin-left: 2%;
+    margin-right: calc(2% + 3px);
+
+    &:first-child {
+      margin-left: 0;
+    }
+
+    &:last-child {
+      margin-right: 0;
+    }
+
+    .step-counter {
+      padding-right: 0;
+    }
+
+    .step-name {
+      z-index: 3;
+      padding-top: 3px;
+      border-top-right-radius: 16px;
+      border-bottom-right-radius: 16px;
+      padding-right: 12px;
+      align-self: stretch;
+      border-left: none !important;
+      padding-left: 22px;
+      background: $blue-40;
+      margin-left: -15px;
+      border: 1px solid $blue-200;
+      white-space: nowrap;
+
+      &::before {
+        content: "";
+        position: absolute;
+        height: 100%;
+        width: 3px;
+        right: -3px;
+        background: white;
+      }
     }
   }
 }
