--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -74,6 +74,8 @@ $font-size-xxx-small: 0.8125rem; // 13px
 $font-size-xxxx-small: 0.75rem; // 12px
 
 // Spacing sizes
+$size-card-lg: 240px;
+$size-mobile: 320px;
 $size-mobile-lg: 480px;
 $size-tablet: 640px;
 $size-md: 800px;
