--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -93,6 +93,14 @@
   max-width: none !important;
 }
 
+.maxw-card-lg {
+  max-width: $size-card-lg !important;
+}
+
+.maxw-mobile {
+  max-width: $size-mobile !important;
+}
+
 .maxw-mobile-lg {
   max-width: 480px !important;
 }
