--- a/_sass/pages/_brand.scss
+++ b/_sass/pages/_brand.scss
@@ -991,9 +991,11 @@
 }
 
 .border-rounded {
-  border-radius: 0.25rem;;
+  border-radius: 0.25rem;
 }
 
 .img--business-card {
-  border: 1px solid $gray-300;
+  border: 1px solid $gray-40;
+  max-width: 3.5in !important;
+  width: 100%;
 }
