--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -64,7 +64,7 @@
     z-index: 2;
   }
 
-  &.active {
+  &[aria-current="true"] {
     .step-name {
       color: $blue-200;
     }
@@ -119,7 +119,7 @@
   }
 }
 
-.active {
+[aria-current="true"] {
   .step-name {
     @include media-breakpoint-down(xs) {
       display: block;
