Add missing class

--- a/_includes/role_level.html
+++ b/_includes/role_level.html
@@ -26,7 +26,7 @@
       </div>
     </li>
     {% else %}
-    <li class="stepper-item">
+    <li class="stepper-item completed">
       <div class="step-counter">
         <img src="/img/career-pathways/icons/complete.svg" alt="">
       </div>
