update current step mobile

--- a/_includes/role_level.html
+++ b/_includes/role_level.html
@@ -7,7 +7,8 @@
   {% if role_downcase == current %}
   <li class="stepper-item" aria-current="true">
     <div class="step-counter">
-      <img src="/img/career_pathways/icons/current.svg" alt="">
+      <img class="step-counter--current" src="/img/career_pathways/icons/current.svg" alt="">
+      <img class="step-counter--current-mobile" src="/img/career_pathways/icons/current-mobile.svg" alt="">
       {% assign found_current = true %}
     </div>
     <div class="step-name">
