--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -29,6 +29,10 @@
   display: flex;
   margin-bottom: 24px;
   padding-left: 0 !important;
+
+  @media (max-width: 320px) {
+    display: none;
+  }
 }
 
 .stepper-item {
@@ -50,13 +54,15 @@
   }
 
   &::after {
-    position: absolute;
-    content: "";
-    border-bottom: 2px solid $gray-20;
-    width: 100%;
-    top: 16px;
-    left: 50%;
-    z-index: 2;
+    @media (min-width: 410px) {
+      position: absolute;
+      content: "";
+      border-bottom: 2px solid $gray-20;
+      width: 100%;
+      top: 16px;
+      left: 50%;
+      z-index: 2;
+    }
   }
 
   &[aria-current="true"] {
@@ -71,13 +77,15 @@
     }
 
     &::after {
-      position: absolute;
-      content: "";
-      border-bottom: 2px solid $blue-40;
-      width: 100%;
-      top: 16px;
-      left: 50%;
-      z-index: 3;
+      @media (min-width: 410px) {
+        position: absolute;
+        content: "";
+        border-bottom: 2px solid $blue-40;
+        width: 100%;
+        top: 16px;
+        left: 50%;
+        z-index: 3;
+      }
     }
   }
 
@@ -98,8 +106,11 @@
   align-items: center;
   border-radius: 50%;
   margin-bottom: 6px;
-  padding-inline: 3px;
   background-color: white;
+
+  @media (min-width: 410px) {
+    padding-inline: 3px;
+  }
 }
 
 .step-name {
@@ -139,19 +150,25 @@
 
   .stepper-item[aria-current="true"] {
     flex-direction: row;
-    margin-left: 2%;
-    margin-right: calc(2% + 3px);
+    margin-inline: 1.5%;
+    @media (min-width: 410px) {
+      margin-right: calc(1.5% + 3px);
+    }
 
     &:first-child {
       margin-left: 0;
     }
 
-    &:last-child {
-      margin-right: 0;
-    }
-
     .step-counter {
       padding-right: 0;
+
+      &:first-child {
+        margin-left: 0;
+      }
+
+      &:last-child {
+        margin-right: 0;
+      }
     }
 
     .step-name {
