--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -41,6 +41,7 @@
   flex-direction: column;
   align-items: center;
   flex: 1;
+  margin-inline: 2px;
   padding-bottom: 0 !important;
   padding-left: 0 !important;
 
