--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -151,8 +151,8 @@
 
   .stepper-item[aria-current="true"] {
     flex-direction: row;
-    margin-inline: 1.5%;
     @media screen and (min-width: 410px) {
+      margin-left: 1.5%;
       margin-right: calc(1.5% + 3px);
     }
 
