update text spacing/padding

--- a/_layouts/career_pathways_role.html
+++ b/_layouts/career_pathways_role.html
@@ -34,8 +34,8 @@ layout: default
 
     <section class="col-12 col-md-9">
       <div class="text prose" markdown="1">
-        <p class="font-sm text-gray-light">Updated: {{ page.updated_date }}</p>
-        <h2 class="mt-3" id="introduction">Introduction to the role of {{ page.title | downcase }}</h2>
+        <p class="font-sm text-gray-light mb-0">Updated: {{ page.updated_date }}</p>
+        <h2 class="mt-0 pt-3" id="introduction">Introduction to the role of {{ page.title | downcase }}</h2>
 {{ content }}
 
 <a class="post-footer__see-all" href="/careers/career-pathways/">
