--- a/_sass/pages/_career-pathways.scss
+++ b/_sass/pages/_career-pathways.scss
@@ -7,6 +7,11 @@
 }
 
 .page-career-pathways-role {
+  h3 {
+    margin-top: -1em;
+    padding-top: 1.5em;
+  }
+
   h4 {
     font-size: $font-size-large;
   }
