--- a/_layouts/career_pathways_role.html
+++ b/_layouts/career_pathways_role.html
@@ -2,11 +2,19 @@
 layout: default
 ---
 
-{% include hero_banner.html
-  hero_content = page.hero_content
-  color = "green"
-  image = page.hero_image
-%}
+<div
+  class="bg-green hero-banner"
+  style="background-image: url(/img/{{ page.hero_image }});"
+>
+  <header class="hero hero-banner mb-5">
+    <div class="hero-container container-fluid text-center">
+      <h1 class="hero-heading">{{ page.title }}</h1>
+      <div class="hero-content">
+        Find out what a {{ page.title | downcase }} does and the skills <br class="linebreak">you need to do the job.
+      </div>
+    </div>
+  </header>
+</div>
 
 <div class="grid-container">
   <div class="row">
