remove need to add img path

--- a/_layouts/career_pathways_role.html
+++ b/_layouts/career_pathways_role.html
@@ -4,7 +4,7 @@ layout: default
 
 <div
   class="bg-green hero-banner"
-  style="background-image: url(/img/{{ page.hero_image }});"
+  style="background-image: url(/img/career_pathways/{{ page.title | slugify }}.svg);"
 >
   <header class="hero hero-banner mb-5">
     <div class="hero-container container-fluid text-center">
