Use green-400 for current text color

--- a/_sass/pages/_career_pathways.scss
+++ b/_sass/pages/_career_pathways.scss
@@ -77,7 +77,7 @@
 
   &[aria-current="true"] {
     .step-name {
-      color: $green-300-a;
+      color: $green-400;
       font-weight: bold;
     }
   }
