Add Career pathways (#207)
Co-authored-by: nickbristow <richard.nick.bristow@gmail.com>

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,7 @@
             <h2>Careers</h2>
             <ul>
               <li><a href="/careers/join/">Join us</a></li>
+              <li><a href="{{site.baseurl}}/careers/career-pathways/">Career <br class="linebreak">pathways</a></li>
             </ul>
           </div>
         </div>
