--- a/_includes/intro_cta.html
+++ b/_includes/intro_cta.html
@@ -2,7 +2,7 @@
   header = "Introduce yourself."
   text = 'Interested in Skylight, but not ready to apply? <br class="linebreak">Connect with us by dropping us an email.'
   text_css_class = "page-subfooter-text-col"
-  cta_path = "mailto:hello@skylight.digital"
+  cta_path = "mailto:recruiting@skylight.digital"
   cta = "Email us"
   icon_css_class = "fa fa-at"
 %}
