--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,5 +16,5 @@
 
     {% include analytics.html %}
   </body>
-
+<script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
 </html>
