add icon styling to lock link

--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -357,3 +357,9 @@ $icon-size: 2rem;
   background-color: $ochre-20;
   padding: 1.5rem;
 }
+
+.link--cta {
+  i {
+    margin-left: 0.5rem;
+  }
+}
