more greenhouse styling tweaks

--- a/_sass/pages/_join.scss
+++ b/_sass/pages/_join.scss
@@ -43,6 +43,10 @@
     margin-top: 5rem;
   }
 
+  #interview-process {
+    margin-top: 0;
+  }
+
   h3 {
     font-size: $font-size-medium;
     line-height: 1.375;
