--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,9 @@
     {% include footer.html %}
 
     {% include analytics.html %}
-    <script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
+    
+    {% if page.load_greenhouse_script %}
+      <script src="https://boards.greenhouse.io/embed/job_board/js?for=skylighthq"></script>
+    {% endif %}
   </body>
 </html>
