--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -241,6 +241,39 @@ $icon-size: 2rem;
   }
 }
 
+.interview-explanation {
+  p {
+    margin-bottom: 1rem;
+  }
+
+  h3 {
+    margin-bottom: 1rem;
+    font-size: $font-size-large;
+  }
+
+  h4 {
+    font-family: $font-family-mono;
+    font-size: $font-size-small;
+    letter-spacing: 0.05em;
+    line-height: 1.375;
+    text-transform: uppercase;
+    margin-bottom: 0.5em;
+  }
+}
+
+.callout_item {
+  margin-bottom: 1rem;
+}
+.callout_subtitle {
+  font-size: 1.125rem;
+  font-weight: bold;
+}
+
+.callout--tip__title {
+  font-weight: bold;
+  margin-bottom: 1.5rem;
+}
+
 .callout--tip {
   @include alert;
   background-color: $ochre-20;
