--- a/_sass/pages/_toolkits.scss
+++ b/_sass/pages/_toolkits.scss
@@ -248,7 +248,8 @@ $icon-size: 2rem;
 
   h3 {
     margin-bottom: 1rem;
-    font-size: $font-size-large;
+    font-size: $font-size-medium;
+    line-height: 1.375;
   }
 
   h4 {
@@ -258,6 +259,7 @@ $icon-size: 2rem;
     line-height: 1.375;
     text-transform: uppercase;
     margin-bottom: 0.5em;
+    margin-top: 1.5em;
   }
 }
 
@@ -269,9 +271,9 @@ $icon-size: 2rem;
   font-weight: bold;
 }
 
-.callout--tip__title {
+.callout_title {
   font-weight: bold;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem !important;
 }
 
 .callout--tip {
