--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -42,13 +42,13 @@
   <p>
     For most roles, we also offer paid internship or apprenticeship opportunities for 
     people who are starting their careers or transitioning to new careers. If you’re interested in an internship or
-    apprenticeship opportunity with Skylight, please <a href="mailto:hello@skylight.digital">get in touch</a>.
+    apprenticeship opportunity with Skylight, please <a href="mailto:recruiting@skylight.digital">get in touch</a>.
   </p>
   {% else %}
   <p>
     We’re not currently hiring at the moment, but that can change quickly. So
     please don’t hesitate to
-    <a href="mailto:hello@skylight.digital">>get in touch</a>!
+    <a href="mailto:recruiting@skylight.digital">>get in touch</a>!
   </p>
   {% endif %}
 </div>
