--- a/_includes/open_positions.html
+++ b/_includes/open_positions.html
@@ -48,7 +48,7 @@
   <p>
     We’re not currently hiring at the moment, but that can change quickly. So
     please don’t hesitate to
-    <a href="mailto:recruiting@skylight.digital">>get in touch</a>!
+    <a href="mailto:recruiting@skylight.digital">get in touch</a>!
   </p>
   {% endif %}
 </div>
